# linkedin-company-admin-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  manifest.json  pyproject.toml  renovate.json
.github/workflows/: ci.yml.pending  release.yml  selector-canary.yml
docs/: CONTRIBUTING.md  RCA_DELETE_POST.md  README.ro.md  TOOL_REFERENCE.md  TROUBLESHOOTING.md
linkedin_company_admin_mcp/: __init__.py  __main__.py  cli.py  constants.py  error_handler.py  logging_config.py  server.py
linkedin_company_admin_mcp/config/: loaders.py  schema.py
linkedin_company_admin_mcp/core/: auth.py  browser.py  debug_snapshot.py  exceptions.py  rate_limit.py  rate_limit_sqlite.py  utils.py
linkedin_company_admin_mcp/providers/: admin.py  base.py  browser_provider.py  posts.py  shared.py
linkedin_company_admin_mcp/selectors/: __init__.py  staleness.py  strategies.py
linkedin_company_admin_mcp/tools/: bridge_personal.py  company_admin.py  company_content.py  company_growth.py  company_read.py  session.py
scripts/: e2e_content_roundtrip.py  e2e_edit_about.py  e2e_personal_tag.py  e2e_reshare.py  e2e_schedule.py  e2e_schedule_v2.py  e2e_update_details.py
tests/fixtures/: loader.py
tests/fixtures/synthetic/: edit_about_tab.html  post_options_menu.html  reshare_actor_switch.html  schedule_dialog.html
tests/unit/: test_cli_check_selectors.py  test_config_loaders.py  test_debug_snapshot.py  test_error_handler.py  test_exceptions.py  test_fixture_loader.py  test_providers.py  test_rate_limit.py  test_rate_limit_sqlite.py  test_schema.py  test_selectors_resolve.py  test_selectors_staleness.py  test_server.py  test_smoke.py  test_strategies.py  test_utils.py
